# seestar-proxy

./: .gitignore  CLAUDE.md  Cargo.toml  Cross-ble.toml  Cross.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
doc/: architecture.md  ble-tools.md  hooks.md
scripts/: colo-relay.sh  install_pre_commit_rustfmt.sh  pf-redirect.sh  pi-hotspot-setup.sh
src/: config.rs  control.rs  dashboard.rs  discovery.rs  hooks.rs  imaging.rs  lib.rs  main.rs  metrics.rs  ntp.rs  protocol.rs  recorder.rs  replay.rs  tailscale.rs  transparent.rs
src/tailscale/: bridge.rs  mod.rs
src/wireguard/: bridge.rs  dns.rs  keys.rs  mod.rs  netstack.rs  qr.rs  tunnel_discovery.rs
tests/: control_integration.rs  discovery_integration.rs  imaging_integration.rs
