[package]
name = "seestar-proxy"
version = "0.1.0"
edition = "2024"
description = "TCP proxy and multiplexer for Seestar smart telescopes"
license = "GPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
anyhow = "1"
axum = "0.7"
futures-util = "0.3"
mlua = { version = "0.10", features = ["luajit", "vendored", "async", "send", "serialize"] }

[dev-dependencies]
tower = "0.5"
tempfile = "3"

[profile.release]
opt-level = "s"    # Optimize for size (good for Pi)
lto = true
strip = true
codegen-units = 1
